readme and endpoint corrected
